# tuiserial

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Cross.toml  LICENSE  MENU_REFACTORING.md  README-CN.md  README.md
.github/workflows/: release.yml
.serena/: project.yml
crates/tuiserial-cli/: Cargo.toml
crates/tuiserial-cli/src/: global_handler.rs  handler.rs  input_utils.rs  key_handler.rs  main.rs  menu_handler.rs  mouse_handler.rs  plugin_adapter.rs  tx_handler.rs
crates/tuiserial-core/: Cargo.toml
crates/tuiserial-core/src/: config.rs  error.rs  error_log.rs  file_log.rs  i18n.rs  lib.rs  log.rs  menu_def.rs  notification.rs  session.rs  state.rs  types.rs
crates/tuiserial-plugin/: Cargo.toml
crates/tuiserial-plugin/src/: git.rs  lib.rs  manager.rs  native.rs  operations.rs  registry.rs  runtime.rs  script.rs  status.rs  types.rs
crates/tuiserial-plugin/src/manager/: discovery.rs  lifecycle.rs  mod.rs  pipeline.rs  recovery.rs
crates/tuiserial-serial/: Cargo.toml
crates/tuiserial-serial/src/: lib.rs
crates/tuiserial-tabs/: Cargo.toml  README.md
crates/tuiserial-tabs/examples/: basic.rs
crates/tuiserial-tabs/src/: layout.rs  lib.rs  session.rs  tabs_ui.rs
crates/tuiserial-ui/: Cargo.toml
crates/tuiserial-ui/src/: areas.rs  config.rs  help.rs  lib.rs  log.rs  menu.rs  mouse.rs  notification.rs  plugin_modal.rs  plugin_registry.rs  shortcuts.rs  status.rs  tx.rs  utils.rs
docs/: PLUGIN_DEVELOPMENT_GUIDE_CN.md
locales/: app.yml
src/: handler.rs  main.rs  model.rs  serial.rs  ui.rs
