[package]
name = "tuiserial"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A terminal user interface for serial port communication"
license = "MIT"
homepage = "https://github.com/yourusername/tuiserial"
repository = "https://github.com/yourusername/tuiserial"

[dependencies]
ratatui = "0.29.0"
serialport = "4.3"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
color-eyre = "0.6"

[package.metadata.deb]
maintainer = "Your Name <your.email@example.com>"
depends = "$auto, libudev1"
section = "utils"
priority = "optional"
assets = [
    ["target/release/tuiserial", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tuiserial", dest = "/usr/bin/tuiserial", mode = "755" },
]
