[workspace]
resolver = "2"
members = [
    "crates/tuiserial-core",
    "crates/tuiserial-serial",
    "crates/tuiserial-ui",
    "crates/tuiserial-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
homepage = "https://github.com/yourusername/tuiserial"
repository = "https://github.com/yourusername/tuiserial"

[workspace.dependencies]
# Internal crates
tuiserial-core = { path = "crates/tuiserial-core" }
tuiserial-serial = { path = "crates/tuiserial-serial" }
tuiserial-ui = { path = "crates/tuiserial-ui" }

# External dependencies
ratatui = "0.29.0"
serialport = "4.3"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
color-eyre = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
