[workspace]
resolver = "2"
members = [
    "crates/tuiserial-core",
    "crates/tuiserial-serial",
    "crates/tuiserial-ui",
    "crates/tuiserial-tabs",
    "crates/tuiserial-cli",  # Main binary package (named tuiserial)
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["pengheng <m18511047688@163.com>"]
license = "MIT"
homepage = "https://github.com/horldsence/tuiserial"
repository = "https://github.com/horldsence/tuiserial"
readme = "README.md"

[workspace.dependencies]
# Internal crates
tuiserial-core = { version = "0.1.2", path = "crates/tuiserial-core" }
tuiserial-serial = { version = "0.1.2", path = "crates/tuiserial-serial" }
tuiserial-ui = { version = "0.1.2", path = "crates/tuiserial-ui" }
tuiserial-tabs = { version = "0.1.2", path = "crates/tuiserial-tabs" }

# External dependencies
ratatui = "0.29.0"
serialport = "4.3"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
color-eyre = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
