[package]
name = "tuiserial"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Command-line interface for tuiserial serial port terminal"

[[bin]]
name = "tuiserial"
path = "src/main.rs"

[dependencies]
tuiserial-core = { workspace = true }
tuiserial-serial = { workspace = true }
tuiserial-ui = { workspace = true }
tuiserial-plugin = { workspace = true, optional = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
rust-i18n = { workspace = true }

[package.metadata.deb]
maintainer = "pengheng.wang@foxmail.com"
depends = "$auto, libudev1"
section = "utils"
priority = "optional"
assets = [
    ["target/release/tuiserial", "usr/bin/", "755"],
]

[package.metadata.deb.variants.aarch64]
depends = "$auto, libudev1"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tuiserial", dest = "/usr/bin/tuiserial", mode = "755" },
]

[features]
plugin = ["tuiserial-plugin"]
