[package]
name = "tuiserial-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core data models and types for tuiserial"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
dirs = "5.0"
phf = { version = "0.11", features = ["macros"] }
