[package]
name = "tuiserial-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core data structures and types for tuiserial"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
dirs = "5.0"
rust-i18n = { workspace = true }
thiserror = { workspace = true }
