[package]
name = "tuiserial-serial"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Serial port communication library for tuiserial"

[dependencies]
tuiserial-core = { workspace = true }
serialport = { workspace = true }
tokio = { workspace = true }
